# kairos-connect-sdks

./: LICENSE  README.md
.github/workflows/: ci.yml  publish-python.yml  publish-typescript.yml  release-go.yml
go/: BUILD_SUMMARY.txt  IMPLEMENTATION.md  INDEX.md  MANIFEST.md  QUICKREF.md  README.md  documents.go  documents_test.go  errors.go  example_test.go  forms.go  go.mod  goals.go  goals_test.go  http.go  kairos.go  kairos_test.go  normalize.go  tasks.go  tasks_test.go  team.go  team_test.go  types.go  whiteboards.go
python/: .gitignore  COMPLETION_SUMMARY.md  FILES.txt  MANIFEST.md  README.md  STRUCTURE.md  examples.py  pyproject.toml
python/kairos/: __init__.py  _http.py  _normalize.py  client.py  errors.py  types.py
python/kairos/resources/: __init__.py  documents.py  forms.py  goals.py  tasks.py  team.py  whiteboards.py
python/tests/: __init__.py  test_client.py  test_documents.py  test_goals.py  test_tasks.py  test_team.py
typescript/: .gitignore  .npmrc  CHANGELOG.md  IMPLEMENTATION.md  QUICK_START.md  README.md  package.json  test-live.mts  tsconfig.json  tsup.config.ts
typescript/src/: client.ts  errors.ts  http.ts  index.ts  normalize.ts  types.ts
typescript/src/resources/: documents.ts  forms.ts  goals.ts  tasks.ts  team.ts  whiteboards.ts
typescript/tests/: client.test.ts  goals.test.ts  tasks.test.ts
