[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos-sdk"
dynamic = ["version"]
description = "Official Python SDK for Kairos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["kairos", "sdk", "tasks", "goals", "project-management"]
authors = [
    {name = "Kairos", email = "support@thekairos.app"}
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://thekairos.app/docs/sdks/python"
Repository = "https://github.com/moemollaei-org/kairos-connect-sdks/tree/main/python"
Issues = "https://github.com/moemollaei-org/kairos-connect-sdks/issues"
Changelog = "https://github.com/moemollaei-org/kairos-connect-sdks/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.version]
path = "kairos/__init__.py"
